# trade-scanner

./: .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml  watchlist.txt
.github/workflows/: ci.yml
tests/: conftest.py  test_indicators.py  test_patterns_flag.py  test_patterns_vcp.py  test_providers_instruments.py  test_providers_prices.py  test_scanner.py  test_types.py
tests/integration/: test_multi_pattern_scan.py  test_yahoo_provider_integration.py
trade_scanner/: cli.py  indicators.py  scanner.py  types.py
trade_scanner/patterns/: __init__.py  base.py  flag.py  vcp.py
trade_scanner/providers/instruments/: __init__.py  base.py  file.py
trade_scanner/providers/prices/: __init__.py  base.py  yahoo.py
